[package]
name = "naro3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "^1.0.101", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "mysql" ] }
